# logger_generate

./: LICENSE  README.md  example.py  example_local_logger_generate.py  pypi發布筆記.md  pyproject.toml  setup.py
config/: base.py
logger_generate/: __init__.py  logger_generate.py
logs/: example
