[tool.poetry]
name = "logger_generate"
version = "0.1.0"
description = ""
authors = ["we684123 <we684123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
